--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -13,42 +13,41 @@ body, html { height: 100%; }
 
 /* general */
 
-body { background-color: #fff; font-family: Georgia, serif; color: #333; font-size: 13px; line-height: 25px; }
+body { background-image: url('../images/background.jpg'); background-color: #555; background-attachment: fixed; font-family: Georgia, serif; color: #333; font-size: 13px; line-height: 25px; }
 .clear { clear: both; }
-#background { display: block; position: fixed; top: 0; left: 0; max-width: 100%; max-height: 100%; } 
 
 /* layout */
 
-#topbar { width: 100%; position: relative; }
+#topbar { width: 100%; position: fixed; top: 0; z-index: 2; }
 #nav { width: 961px; margin: 0 auto; }
-#topbar, #nav { font-size: 12px; height: 25px; padding-top: 5px; color: #666; background-color: #fff; border-bottom: 1px solid #ccc; }
+#topbar, #nav { font-size: 12px; height: 25px; padding-top: 5px; color: #ccc; background-color: #333; border-bottom: 1px solid #000; }
 #topbar ul, #nav ul { display: block; margin: 0 auto; width: 960px; }
 #topbar li, #nav li { display: block; float: left; margin-right: 20px; height: 26px; }
-#topbar .active, #nav .active { color: #666; background-image: url('images/pointer.jpg'); background-repeat: no-repeat; background-position: center bottom; }
+#topbar .active, #nav .active { color: #ccc; background-image: url('images/pointer.jpg'); background-repeat: no-repeat; background-position: center bottom; }
 #topbar .right, #nav .right { float: right; margin: 0; }
 #topbar a, #nav a { color: inherit; text-decoration: none; }
 #topbar a:hover, #nav a:hover { color: #bbb; }
 .tooltip { position: absolute; background-color: #fff; border: 1px solid #eee; color: #555; z-index: 5; border-radius: 5px; font-size: 13px; line-height: 13px; width: 80px; text-align: center; padding: 5px 10px; top: 0; left: 0; }
 .tooltip img { position: absolute; top: -7px; left: 45px; }
-#pagetitle { display: block; margin: 40px auto 30px auto; width: 960px; }
+#pagetitle { display: block; margin: 60px auto 30px auto; width: 960px; }
 #pagetitle img { display: block; margin: 0 auto; width: 348px; height: 62px; }
-.bieberfever #pagetitle img { width: 303px; height: 60px; position: relative; }
-#leaderboard { margin: 25px auto; width: 728px; height: 90px; overflow: hidden; position: relative; }
+.bieberfever #pagetitle img { width: 500px; height: 99px; position: relative; }
+#leaderboard { margin: 25px auto; width: 728px; height: 90px; overflow: hidden; position: relative; display: none; }
 .rectangle { width: 300px; height: 250px; overflow: hidden; margin: -10px; }
-#slider, .slide { width: 1000px; height: 300px; position: relative; }
+#slider, .slide { width: 1000px; height: 300px; position: relative; border-radius: 10px; }
 #slider { margin: 0 auto; overflow: hidden; border: none; background-color: #fff; border-top: 0; }
 #slides { position: absolute; top: 0; left: 0; height: 320px; }
 .slide { float: left; }
 .slide .text { position: absolute; right: 0px; top: 0px; width: 280px; padding: 20px; height: 250px; }
-.slide img { display: block; position: absolute; top: 10px; left: 10px; width: 660px; height: 280px; }
+.slide img { display: block; position: absolute; top: 10px; left: 10px; width: 660px; height: 280px;  border-radius: 10px; }
 #slider #navigation { position: absolute; bottom: 20px; right: 25px; font-size: 30px; font-weight: bold; font-family: sans-serif; }
 #slider #navigation a { text-decoration: none; color: #000; }
 #slider #navigation a:hover { color: #555; }
 #container { width: 1000px; margin: 0 auto; }
-.articlebox { float: left; width: 280px; margin: 20px 0px; padding: 20px; border: none; background-color: #fff; }
+.articlebox { border-radius: 10px; float: left; width: 280px; margin: 20px 0px; padding: 20px; border: none; background-color: #fff; }
 .articlebox h2, .slide .text h2 { font-family: 'Magra', sans-serif; font-weight: normal; font-size: 23px; margin: 10px 0px; }
 #article .date, .articlebox .date, #slider .date { font-size: 10px; text-transform: uppercase; font-family: sans-serif; color: #888; }
-.articlebox .thumb { display: block; margin: 20px auto; }
+.articlebox .thumb { display: block; margin: 20px auto;  border-radius: 10px; }
 .advertisement { width: 299px; padding: 10px 10px 2px 10px; }
 .halfpage img { display: block; margin: -10px; }
 #article { float: left; width: 599px; margin: -1px 0 0 -1px; padding: 20px; border: 1px solid #ccc; font-family: Georgia, serif; }
@@ -75,6 +74,6 @@ body { background-color: #fff; font-family: Georgia, serif; color: #333; font-si
 .articlebox a, #slider a { text-decoration: none; color: #000; }
 .articlebox li a:hover { text-decoration: underline; color: #666; border-bottom: 0; }
 .articlebox a:hover, #slider a:hover { text-decoration: none; color: #666; }
-#more { display: block; margin: 50px auto; border: 1px solid #cccccc; margin-top: 20px; color: #fff; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); background-color: #ccc; background-image: -moz-linear-gradient(top, #eee, #bbb); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#eee), to(#bbb)); background-image: -webkit-linear-gradient(top, #eee, #bbb); background-image: -o-linear-gradient(top, #eee, #bbb); background-image: linear-gradient(to bottom, #eee, #bbb); background-repeat: repeat-x; border-color: #aaa filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eee', endColorstr='#bbb', GradientType=0); filter: progid:DXImageTransform.Microsoft.gradient(enabled=false); padding: 10px 17px; font-size: 15px; -webkit-border-radius: 6px; -moz-border-radius: 6px; border-radius: 6px; cursor: pointer; -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); }
+#more { display: block; position: relative; margin: 50px auto; border: 1px solid #cccccc; margin-top: 20px; color: #fff; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); background-color: #666; background-image: -moz-linear-gradient(top, #aaa, #777); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#aaa), to(#777)); background-image: -webkit-linear-gradient(top, #aaa, #777); background-image: -o-linear-gradient(top, #aaa, #777); background-image: linear-gradient(to bottom, #aaa, #777); background-repeat: repeat-x; border-color: #aaa filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eee', endColorstr='#bbb', GradientType=0); filter: progid:DXImageTransform.Microsoft.gradient(enabled=false); padding: 10px 17px; font-size: 15px; -webkit-border-radius: 6px; -moz-border-radius: 6px; border-radius: 6px; cursor: pointer; -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); }
 #more:hover { background-image: none; }
 .archive li { padding: 0; min-height: 0; border: 0; }
