--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -18,9 +18,9 @@ body { background-image: url('../images/background.jpg'); background-color: #555
 
 /* layout */
 
-#topbar { width: 100%; position: fixed; top: 0; z-index: 2; }
+#topbar { width: 100%; height: 290px; background-image: url('../images/gradient.png'); position: fixed; top: 0; }
 #nav { width: 961px; margin: 0 auto; }
-#topbar, #nav { font-size: 12px; height: 25px; padding-top: 5px; color: #ccc; background-color: #333; border-bottom: 1px solid #000; }
+#topbar, #nav { font-size: 12px; padding-top: 5px; color: #ccc; }
 #topbar ul, #nav ul { display: block; margin: 0 auto; width: 960px; }
 #topbar li, #nav li { display: block; float: left; margin-right: 20px; height: 26px; }
 #topbar .active, #nav .active { color: #ccc; background-image: url('images/pointer.jpg'); background-repeat: no-repeat; background-position: center bottom; }
@@ -29,7 +29,7 @@ body { background-image: url('../images/background.jpg'); background-color: #555
 #topbar a:hover, #nav a:hover { color: #bbb; }
 .tooltip { position: absolute; background-color: #fff; border: 1px solid #eee; color: #555; z-index: 5; border-radius: 5px; font-size: 13px; line-height: 13px; width: 80px; text-align: center; padding: 5px 10px; top: 0; left: 0; }
 .tooltip img { position: absolute; top: -7px; left: 45px; }
-#pagetitle { display: block; margin: 60px auto 30px auto; width: 960px; }
+#pagetitle { display: block; margin: 80px auto 50px auto; width: 960px; }
 #pagetitle img { display: block; margin: 0 auto; width: 348px; height: 62px; }
 .bieberfever #pagetitle img { width: 500px; height: 99px; position: relative; }
 #leaderboard { margin: 25px auto; width: 728px; height: 90px; overflow: hidden; position: relative; display: none; }
